k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      # nodePort: 30080  # You can specify a port between 30000-32767 or let Kubernetes assign one
