k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: chat-app-backend
          image: ayushchoudhary6/chat-app-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
